4-Arithmetic-Evaluator/gen/SimpleVariableParser.py
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleVariableParser ( Parser ):

    grammarFileName = "SimpleVariable.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'='", "';'", "'print'", 
                     "'('", "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "IdentifierNondigit", "NUMBER", "WS", 
                      "COMMENT", "LINE_COMMENT" ]

    RULE_start = 0
    RULE_stmt = 1
    RULE_arithmeticExpr = 2
    RULE_arithmeticTerm = 3
    RULE_arithmeticFactor = 4

    ruleNames =  [ "start", "stmt", "arithmeticExpr", "arithmeticTerm", 
                   "arithmeticFactor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    IDENTIFIER=12
    IdentifierNondigit=13
    NUMBER=14
    WS=15
    COMMENT=16
    LINE_COMMENT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleVariableParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleVariableParser.StmtContext)
            else:
                return self.getTypedRuleContext(SimpleVariableParser.StmtContext,i)


        def getRuleIndex(self):
            return SimpleVariableParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SimpleVariableParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.stmt()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 38) != 0)):
                    break

            self.state = 15
            self.match(SimpleVariableParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleVariableParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleVariableParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticExpr(self):
            return self.getTypedRuleContext(SimpleVariableParser.ArithmeticExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleVariableParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(SimpleVariableParser.IDENTIFIER, 0)
        def NUMBER(self):
            return self.getToken(SimpleVariableParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = SimpleVariableParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 28
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                localctx = SimpleVariableParser.VarDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                _la = self._input.LA(1)
                if not(_la==1 or _la==2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 18
                self.match(SimpleVariableParser.IDENTIFIER)
                self.state = 19
                self.match(SimpleVariableParser.T__2)
                self.state = 20
                self.match(SimpleVariableParser.NUMBER)
                self.state = 21
                self.match(SimpleVariableParser.T__3)
                pass
            elif token in [5]:
                localctx = SimpleVariableParser.PrintStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 22
                self.match(SimpleVariableParser.T__4)
                self.state = 23
                self.match(SimpleVariableParser.T__5)
                self.state = 24
                self.arithmeticExpr()
                self.state = 25
                self.match(SimpleVariableParser.T__6)
                self.state = 26
                self.match(SimpleVariableParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleVariableParser.RULE_arithmeticExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArithmeticExpr_Context(ArithmeticExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleVariableParser.ArithmeticExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleVariableParser.ArithmeticTermContext)
            else:
                return self.getTypedRuleContext(SimpleVariableParser.ArithmeticTermContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpr_" ):
                listener.enterArithmeticExpr_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpr_" ):
                listener.exitArithmeticExpr_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpr_" ):
                return visitor.visitArithmeticExpr_(self)
            else:
                return visitor.visitChildren(self)



    def arithmeticExpr(self):

        localctx = SimpleVariableParser.ArithmeticExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_arithmeticExpr)
        self._la = 0 # Token type
        try:
            localctx = SimpleVariableParser.ArithmeticExpr_Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.arithmeticTerm()
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8 or _la==9:
                self.state = 31
                _la = self._input.LA(1)
                if not(_la==8 or _la==9):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 32
                self.arithmeticTerm()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleVariableParser.RULE_arithmeticTerm

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ArithmeticTerm_Context(ArithmeticTermContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleVariableParser.ArithmeticTermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def arithmeticFactor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleVariableParser.ArithmeticFactorContext)
            else:
                return self.getTypedRuleContext(SimpleVariableParser.ArithmeticFactorContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticTerm_" ):
                listener.enterArithmeticTerm_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticTerm_" ):
                listener.exitArithmeticTerm_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticTerm_" ):
                return visitor.visitArithmeticTerm_(self)
            else:
                return visitor.visitChildren(self)



    def arithmeticTerm(self):

        localctx = SimpleVariableParser.ArithmeticTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arithmeticTerm)
        self._la = 0 # Token type
        try:
            localctx = SimpleVariableParser.ArithmeticTerm_Context(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.arithmeticFactor()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10 or _la==11:
                self.state = 39
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 40
                self.arithmeticFactor()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArithmeticFactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmeticExpr(self):
            return self.getTypedRuleContext(SimpleVariableParser.ArithmeticExprContext,0)


        def NUMBER(self):
            return self.getToken(SimpleVariableParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(SimpleVariableParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return SimpleVariableParser.RULE_arithmeticFactor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticFactor" ):
                listener.enterArithmeticFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticFactor" ):
                listener.exitArithmeticFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticFactor" ):
                return visitor.visitArithmeticFactor(self)
            else:
                return visitor.visitChildren(self)




    def arithmeticFactor(self):

        localctx = SimpleVariableParser.ArithmeticFactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arithmeticFactor)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 10, 11]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(SimpleVariableParser.T__5)
                self.state = 48
                self.arithmeticExpr()
                self.state = 49
                self.match(SimpleVariableParser.T__6)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(SimpleVariableParser.NUMBER)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.match(SimpleVariableParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





